Attempted to fix some errors and memory leaks

--- a/BoostHTMLServer3/Makefile
+++ b/BoostHTMLServer3/Makefile
@@ -1,7 +1,7 @@
 CC = g++ -std=c++0x
 
 CC_FLAGS = -w
-LIBS = -lboost_system -lprotobuf -lcrypto -lssl -L../../HTMLHandle/HTMLHandle/ -lhtml
+LIBS = -lboost_system -lprotobuf -lcrypto -lssl -L/home/alex/Program/HTMLHandle/HTMLHandle/ -lhtml
 
 EXEC = run
 SOURCES = $(wildcard *.cpp)
@@ -11,7 +11,7 @@ PROTO_OBJECTS = $(PROTO_SOURCES:.pb.cc=.o)
 $(EXEC): $(OBJECTS) $(PROTO_OBJECTS)
 	$(CC) $(OBJECTS) $(PROTO_OBJECTS) -o $(EXEC) -D_GLIBCXX_USE_CXX11_ABI=0  $(LIBS)
 %.o: %.cpp
-	$(CC) -c -I../../HTMLHandle/HTMLHandle/ $(CC_FLAGS) $< -o $@
+	$(CC) -c -I/home/alex/Program/HTMLHandle/HTMLHandle/ $(CC_FLAGS) $< -o $@
 %.o: %.pb.cc
 	$(CC) -c $(CC_FLAGS) $< -o $@
 clean:
